--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.com/noanjrd/binarytrees_visualizer"
+  "homepage": "https://github.com/noanjrd/binarytrees_visualizer",
 
   "scripts": {
     "dev": "vite",
